Refaktorering
Endrer navn for å markere at data ble hentet fra TPS, siden vi skal
bruke ny persondataløsning.